# po-review-board

./: README.md  po-review-board.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  po-review-board.install  watch
po/: po-review-board.pot  sv.po
po/locale/sv/LC_MESSAGES/: po-review-board.mo
src/po_review_board/: main.py
