[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "po-review-board"
version = "0.1.0"
description = "GTK4 app for reviewing .po translations with diff view, comments and approval"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
po-review-board = "po_review_board.main:main"

[tool.setuptools.packages.find]
where = ["src"]
